--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,3 +1,6 @@
+.hidden {
+  display: none; }
+
 .quiz {
   width: 900px;
   position: relative;
@@ -14,13 +17,13 @@
       height: 162px;
       background: url("/img/shape.png") no-repeat;
       background-size: 100%;
-      cursor: pointer;
       line-height: 162px;
       font-size: 15px;
-      text-align: center; }
-
-.spinner {
-  display: block;
-  width: 16px;
-  height: 16px;
-  background: url("/img/spinner.gif") no-repeat; }
+      text-align: center;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none; }
+  .quiz.spinner {
+    width: 16px;
+    height: 16px;
+    background: url("/img/spinner.gif") no-repeat; }
